--- a/todo_app/templates/todo_app/home.html
+++ b/todo_app/templates/todo_app/home.html
@@ -8,30 +8,60 @@
 </head>
 <body>
     <div class="container">
-        <div class="col-md-12">
-            <center><h2>Welcome to Todo App</h2></center>
+        <div class="row">
+            <div class="col-md-12">
+                <center><h2>Welcome to Simple Todo App</h2></center>
+            </div>
         </div>
-        <div class="col-md-12">
-            <table class="table">
-                <thead class="thead-dark">
-                  <tr>
-                    <th scope="col">Task ID</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Priority</th>
-                    <th scope="col">Action</th>
-                  </tr>
-                </thead>
-                <tbody>
-                    {% for task in tasks%}        
-                    <tr>
-                        <th scope="row">{{task.id}}</th>
-                        <td>{{task.name}}</td>
-                        <td>{{task.priority}}</td>
-                        <td><button type="submit" class="btn btn-outline-primary">Complete</button></td>
-                    </tr>
-                {% endfor%}
-                </tbody>
-              </table>
+        <br>
+        <form class="row" method="POST" action="{% url 'addtask' %}">
+            {% csrf_token %}
+            <div class="col">
+                <label for="name">Task Name</label>
+                <input type="name" class="form-control" id="name" name="name" placeholder="Enter your task name" autofocus>
+            </div>
+            <div class="col">
+                <label for="priority">Task Priority</label>
+                <select class="form-control" id="priority"  name="priority">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                </select>
+            </div>
+            <div class="col" style="padding-top: 31px;">
+                <button type="submit" class="btn btn-primary">Create</button>
+            </div>
+        </form>
+        <br>
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table">
+                    <thead class="thead-dark">
+                      <tr>
+                        <th scope="col">Task ID</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Priority</th>
+                        <th scope="col">Action</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                        {% for task in tasks%}        
+                        <tr>
+                            <th scope="row">{{task.id}}</th>
+                            <td>{{task.name}}</td>
+                            <td>{{task.priority}}</td>
+                            <td title="Marking the task as Complete will delete the task from the list.">
+                                <a href="home/{{task.id}}" class="btn btn-outline-primary">
+                                    Mark as Complete
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor%}
+                    </tbody>
+                  </table>
+            </div>
         </div>
     </div>
 </body>
