--- a/todo_app/templates/todo_app/home.html
+++ b/todo_app/templates/todo_app/home.html
@@ -36,6 +36,11 @@
         </form>
         <br>
         <div class="row">
+            <div class="col-md-12" style="color: red;">
+                {{msg}}
+            </div>
+        </div><br>
+        <div class="row">
             <div class="col-md-12">
                 <table class="table">
                     <thead class="thead-dark">
