--- a/todo_app/templates/todo_app/home.html
+++ b/todo_app/templates/todo_app/home.html
@@ -11,8 +11,9 @@
         <div class="row">
             <div class="col-md-12">
                 <center>
-                    <h2>Welcome to Simple Todo App</h2> 
-                    <small>built with <span style="color: #e25555;">&#9829;</span> by Phone Thiri Yadana</small>
+                    <h2>Welcome to <span style="color:#e67e22">Simply Todo</span> App</h2> 
+                    <small>built with <span style="color: #e25555;">&#9829;</span> 
+                    <a href="https://github.com/ptyadana" target="_blank">by Phone Thiri Yadana</a></small>
                 </center>
             </div>
         </div>
